Más interactividad a la modal

--- a/index.html
+++ b/index.html
@@ -110,28 +110,98 @@
                 <p class="modal__paragraph">
                   Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
                 </p>
-                <div class="modal__info">
+                <div class="modal__info grid">
                   <div class="info__text">
-                    <input type="radio" name="radio-btn" id="radio-btn" class="radio">
+                    <input type="radio" name="radio-btn" id="radio-btn0" class="radio">
+                    <label for="radio-btn0"></label>
                     <h3 class="info__title">Pledge with no reward</h3>
                   </div>
                   <p class="modal__description">
                     Choose to support us without a reward if you simply believe in our project. As a backer, 
                     you will be signed up to receive product updates via email.
                   </p>
-                  <div class="modal__show">
+                </div>
+                <div class="modal__info grid">
+                  <div class="info__text">
+                    <input type="radio" name="radio-btn" id="radio-btn1" class="radio">
+                    <label for="radio-btn1"></label>
+                    <div class="info__content">
+                      <h3 class="info__title">Bamboo Stand</h3>
+                      <p class="info__description">Pledge $25 or more</p>
+                    </div>
+                  </div>
+                  <p class="modal__description">
+                    You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+                    you’ll be added to a special Backer member list.
+                  </p>
+                  <div class="price__info">
+                    <h3 class="price price__modal">101</h3>
+                    <p class="left">left</p>
+                  </div>
+                  <!-- <div class="modal__show">
                     <p class="show__text">Enter your pledge</p>
                     <div class="show__inputs">
                       <input type="text" name="money" id="money" placeholder="$">
                       <button class="continue" id="continue">Continue</button>
                     </div>
+                  </div> -->
+                </div>
+                <div class="modal__info grid ">
+                  <div class="info__text">
+                    <input type="radio" name="radio-btn" id="radio-btn2" class="radio">
+                    <label for="radio-btn2"></label>
+                    <div class="info__content">
+                      <h3 class="info__title">Black Edition Stand</h3>
+                      <p class="info__description">Pledge $75 or more</p>
+                    </div>
                   </div>
+                  <p class="modal__description">
+                    You get a Black Special Edition computer stand and a personal thank you.
+                    You'll be added to our Backer member list. Shipping is included
+                  </p>
+                  <div class="price__info">
+                    <h3 class="price price__modal">64</h3>
+                    <p class="left">left</p>
+                  </div>
+                  <!-- <div class="modal__show">
+                    <p class="show__text">Enter your pledge</p>
+                    <div class="show__inputs">
+                      <input type="text" name="money" id="money" placeholder="$">
+                      <button class="continue" id="continue">Continue</button>
+                    </div>
+                  </div> -->
+                </div>
+                <div class="modal__info grid card__off">
+                  <div class="info__text">
+                    <input type="radio" name="radio-btn" id="radio-btn" class="radio">
+                    <label for="radio-btn"></label>
+                    <div class="info__content">
+                      <h3 class="info__title">Mahogany Spacial Edition</h3>
+                      <p class="info__description">Pledge $200 or more</p>
+                    </div>
+                  </div>
+                  <p class="modal__description">
+                    You get two Special Edition Mahogany stands, a Backer T-Shirt,
+                    and a personal thank you. You’ll be added to our Backer member
+                    list. Shipping is included.
+                  </p>
+                  <div class="price__info">
+                    <h3 class="price price__modal">0</h3>
+                    <p class="left">left</p>
+                  </div>
+                  <!-- <div class="modal__show">
+                    <p class="show__text">Enter your pledge</p>
+                    <div class="show__inputs">
+                      <input type="text" name="money" id="money" placeholder="$">
+                      <button class="continue" id="continue">Continue</button>
+                    </div>
+                  </div> -->
                 </div>
 
 
               </section>
               <a href="#" class="box-close" id="close">
-                <img src="images/icon-close-modal.svg" alt=""> 
+                <img src="images/icon-close-modal.svg" class="icon-close" alt="icon-close" title="Close"> 
               </a>
             </div>
           </div>
