--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <p class="show__text">Enter your pledge</p>
                     <div class="show__inputs">
                       <input type="text" name="money" id="money" class="show__money"  value="75">
-                      <button class="continue" id="submit">Continue</button>
+                      <a href="#cardBack" class="continue" id="submit">Continue</a>
                     </div>
                   </div>
                 </div>
@@ -201,7 +201,7 @@
             </div>
           </div>
 
-          <section class="card__back hidden">
+          <section class="card__back hidden" id="#cardBack">
             <div class="card__img">
               <img src="images/icon-check.svg" alt="ilustration-check" title="Check">
             </div>
