--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
       <div class="card__stadistics card">
         <div class="stadistics__flex">
           <article class="stadistics__content">
-            <h1 class="stadistics__number">$89,914</h1>
+            <h1 class="stadistics__number backed">$</h1>
             <p class="stadistics__description">of $100,000 backed</p>
           </article>
           <hr class="lineal">
           <article class="stadistics__content">
-            <h1 class="stadistics__number">5,007 </h1>
+            <h1 class="stadistics__number  backers"></h1>
             <p class="stadistics__description">total backers</p>
           </article>
           <hr class="lineal">
@@ -143,7 +143,7 @@
                     <div class="modal__show">
                         <p class="show__text">Enter your pledge</p>
                         <div class="show__inputs">
-                          <input type="text" name="money" id="money" class="show__money"  value="25">
+                          <input type="text" name="money" id="money" class="show__money money"  value="25">
                           <button class="continue" id="continue">Continue</button>
                         </div>
                     </div>
@@ -169,7 +169,7 @@
                   <div class="modal__show">
                     <p class="show__text">Enter your pledge</p>
                     <div class="show__inputs">
-                      <input type="text" name="money" id="money" class="show__money"  value="75">
+                      <input type="text" name="money" id="money" class="show__money money"  value="75">
                       <button class="continue" id="submit">Continue</button>
                     </div>
                   </div>
