--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <div class="modal__show">
                         <p class="show__text">Enter your pledge</p>
                         <div class="show__inputs">
-                          <input type="text" name="money" id="money" class="show__money money"  value="25">
+                          <input type="number" name="money" id="money" class="show__money money" value="25">
                           <button class="continue" id="continue">Continue</button>
                         </div>
                     </div>
